--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,12 @@
   </head>
   <body class="off">
     
-    <section class="controls">
-      <div class="control audio"><label>Tenor</label><audio controls id="tenor-audio" src="./mp3/heart_of_my_heart/tenor.mp3"></audio></div>
-      <div class="control audio"><label>Lead</label><audio controls id="lead-audio" src="./mp3/heart_of_my_heart/lead.mp3"></audio></div>
-      <div class="control audio"><label>Baritone</label><audio controls id="baritone-audio" src="./mp3/heart_of_my_heart/baritone.mp3"></audio></div>
-      <div class="control audio"><label>Bass</label><audio controls id="bass-audio" src="./mp3/heart_of_my_heart/bass.mp3"></audio></div>
+    <audio id="tenor-audio" src="./mp3/heart_of_my_heart/tenor.mp3"></audio>
+    <audio id="lead-audio" src="./mp3/heart_of_my_heart/lead.mp3"></audio>
+    <audio id="baritone-audio" src="./mp3/heart_of_my_heart/baritone.mp3"></audio>
+    <audio id="bass-audio" src="./mp3/heart_of_my_heart/bass.mp3"></audio>
+
+    <section id="parts" class="controls">
     </section>
 
     <section class="controls">
