--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
     <audio id="baritone-audio" src="./mp3/heart_of_my_heart/baritone.mp3"></audio>
     <audio id="bass-audio" src="./mp3/heart_of_my_heart/bass.mp3"></audio>
 
+    <div id="tenor-drag" class="drags"></div>
+    <div id="lead-drag" class="drags"></div>
+    <div id="bariton-drag" class="drags"></div>
+    <div id="bass-drag" class="drags"></div>
+    <div id="listener-drag" class="drags"></div>
+
     <section id="parts" class="controls">
     </section>
 
