--- a/src/index.html
+++ b/src/index.html
@@ -33,5 +33,7 @@
         <button id="play-button" data-playing="false" role="switch" aria-checked="false">Play</button>
       </div>
     </section>
+    <section id="display">
+    </section>
   </body>
 </html>
