--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div id="lead-drag" class="drags"></div>
     <div id="bariton-drag" class="drags"></div>
     <div id="bass-drag" class="drags"></div>
-    <div id="listener-drag" class="drags"></div>
+    <div id="listener-drag" class="drags no-mouth"></div>
 
     <section id="parts" class="controls">
     </section>
